<resources xmlns:tools="http://schemas.android.com/tools">
    <!--Pages-->
    <string name="app_name">Munchies</string>
    <string name="title_home">Feed</string>
    <string name="title_review">Reviews</string>
    <string name="title_map">Map</string>
    <string name="title_friends">Friends</string>
    <string name="title_profile">You</string>
    <string name="no_data">Not Signed In</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="dont_have_account">Don\'t Have An Account?</string>
    <string name="already_have_account">Already Have An Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="client_id" tools:ignore="TypographyDashes">176346144139-553qs9ntri8u875ir5itkd91l4tpputp.apps.googleusercontent.com</string>

    <!--Reviews-->
    <string name="add_review">Add Review</string>
    <string name="leave_review">Leave a Review</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="food_quality">Food Quality</string>
    <string name="review_hint">Tell us about your experience…</string>
    <string name="submit_review">Submit Review</string>
    <string name="add_photos">Upload Photos</string>
    <string name="likes">Likes</string>
    <string name="no_likes">0</string>
    <string name="reviewed_by">"Reviewed by: "</string>
    <string name="reviewed_on">"On: "</string>
    <string name="empty_feed">"Nothing from your friends just yet."</string>

    <!--Friends-->
    <string name="add_friend">Add Friend</string>
    <string name="unfriend">Unfriend</string>
    <string name="request">Request</string>
    <string name="add_friends">Add Friends</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="reject_request">Reject</string>
    <string name="accept_request">Accept</string>
    <string name="view_friend_requests">View Friend Requests</string>
    <string name="title_activity_maps">Choose a location</string>
    <string name="you_have_no_friend_requests">You have no incoming friend requests</string>
    <string name="requests">Requests</string>
    <string name="friends">.My Friends</string>
    <string name="options">Options</string>
    <string name="you_have_no_friends">You have no friends yet. Try adding some!</string>
    <string name="no_results_found">No results found</string>
</resources>